--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.1"
 AzureClusterlessHPC = "0090f474-c28d-4577-9e1b-9155814dbffa"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 JUDI = "f3b833dc-6b2e-5b9c-b940-873ed6319979"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
